QJSPrimitiveValue: Use operator symbol in lieu of name

Fixes: QTBUG-110585
Change-Id: I6acd1ea2a171bd5978bed752f52b8af262936cc2
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit de480dd213815cf77f5da8a1f19365a1092d7c1a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>