src/qml/jsapi/qjsprimitivevalue.h
@@ -95,7 +95,7 @@ class QJSPrimitiveValue
         {
             // compare mul_int32 in qv4math_p.h
             auto hadOverflow = qMulOverflow(lhs, rhs, result);
-            if (((lhs < 0) xor (rhs < 0)) && (*result == 0))
+            if (((lhs < 0) ^ (rhs < 0)) && (*result == 0))
                 return true; // result must be negative 0, does not fit into int
             return hadOverflow;
         }
